# Elastick_Pendulum

./: BasicWindow.h  BoolTypeButton.h  Box.h  Button.cpp  Button.h  ButtonFrame.cpp  ButtonFrame.h  CMakeLists.txt  ChoiseBar.h  ContinuousSlider.cpp  ContinuousSlider.h  FunctionBasedButton.h  Pendulum.cpp  Pendulum.h  README.md  TextBar.cpp  TextBar.h  animation.cpp  calculation.h  data.txt  menu.cpp  menu.h  properties.cpp  properties.h  some_structs.h  text.cpp  text.h  text_about.txt
